@@ -1,10 +1,11 @@
-/* 
+/*
  *
  * $Id$
  * Copyright (C) 2003 Sebastian Trueg <trueg@k3b.org>
+ * Copyright (C) 2004-2005 Jakob Petsovits <jpetso@gmx.at>
  *
  * This file is part of the K3b project.
- * Copyright (C) 1998-2004 Sebastian Trueg <trueg@k3b.org>
+ * Copyright (C) 1998-2005 Sebastian Trueg <trueg@k3b.org>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -24,79 +25,162 @@
 #include <klocale.h>
 
 
-QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry, 
-					unsigned int trackNumber,
-					const QString& pattern, 
-					bool replace, 
-					const QString& replaceString )
+QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
+                                        unsigned int trackNumber,
+                                        const QString& pattern,
+                                        bool replace,
+                                        const QString& replaceString )
 {
   if( entry.titles.count() < trackNumber )
     return "";
 
   QString dir, s;
+  char c = ' ';     // contains the character representation of a special string
+  unsigned int len; // length of the current special string
+
+
   for( unsigned int i = 0; i < pattern.length(); ++i ) {
 
     if( pattern[i] == '%' ) {
-      ++i;
 
-      if( i < pattern.length() ) {
-	switch( pattern[i] ) {
-	case 'a':
-	  s = entry.artists[trackNumber-1];
-	  s.replace( '/', '_' );
-	  dir.append( s.isEmpty() 
-		      ? i18n("unknown") + QString(" %1").arg(trackNumber)
-		      : s );
-	  break;
-	case 't':
-	  s = entry.titles[trackNumber-1];
-	  s.replace( '/', '_' );
-	  dir.append( s.isEmpty() 
-		      ? i18n("Track %1").arg(trackNumber) 
-		      : s );
-	  break;
-	case 'n':
-	  dir.append( QString::number(trackNumber).rightJustify( 2, '0' ) );
-	  break;
-	case 'y':
-	  dir.append( QString::number( entry.year ) );
-	  break;
-	case 'e':
-	  s = entry.extInfos[trackNumber-1];
-	  s.replace( '/', '_' );
-	  dir.append( s );
-	  break;
-	case 'g':
-	  s = ( entry.genre.isEmpty() ? entry.category : entry.genre );
-	  s.replace( '/', '_' );
-	  dir.append( s );
-	  break;
-	case 'r':
-	  dir.append( entry.cdArtist.isEmpty() 
-		      ? i18n("unknown") : entry.cdArtist );
-	  break;
-	case 'm':
-	  s = entry.cdTitle;
-	  s.replace( '/', '_' );
-	  dir.append( s.isEmpty() 
-		      ? i18n("unknown") : s );
-	  break;
-	case 'x':
-	  s = entry.cdExtInfo;
-	  s.replace( '/', '_' );
-	  dir.append( s ); // I think it makes more sense to allow empty extinfos
-	  break;
-	case 'd':
-	  dir.append( KGlobal::locale()->formatDate( QDate::currentDate() ) );
-	  break;
-	default:
-	  dir.append( "%" );
-	  dir.append( pattern[i] );
-	  break;
-	}
+      if( i + 1 < pattern.length() ) {
+        len = 2;
+
+        if( pattern[i+1] != '{' ) {  // strings like %a
+          c = pattern[i+1];
+        }
+        else if( i + 3 >= pattern.length() ) {  // too short to contain a %{*} string
+          c = ' ';
+        }
+        else {  // long enough to contain %{*}
+
+          if( pattern[i+3] == '}' ) {  // strings like %{a}
+            c = pattern[i+2];
+            len = 4;
+          }
+          else {  // strings like %{artist}, or anything like %{*
+
+            while( i + len - 1 < pattern.length() ) {
+              ++len;
+
+              if( pattern[i + len - 1] == '%' ) {  // don't touch other special strings
+                c = ' ';
+                --len;
+                break;
+              }
+              else if( pattern[i + len - 1] == '}' ) {
+                s = pattern.mid( i + 2, len - 3 );
+
+                if( s == "title" ) {
+                  c = TITLE;
+                }
+                else if( s == "artist" ) {
+                  c = ARTIST;
+                }
+                else if( s == "number" ) {
+                  c = NUMBER;
+                }
+                else if( s == "comment" ) {
+                  c = COMMENT;
+                }
+                else if( s == "year" ) {
+                  c = YEAR;
+                }
+                else if( s == "genre" ) {
+                  c = GENRE;
+                }
+                else if( s == "albumtitle" ) {
+                  c = ALBUMTITLE;
+                }
+                else if( s == "albumartist" ) {
+                  c = ALBUMARTIST;
+                }
+                else if( s == "albumcomment" ) {
+                  c = ALBUMCOMMENT;
+                }
+                else if( s == "date" ) {
+                  c = DATE;
+                }
+                else {  // no valid pattern in here, don't replace anything
+                  c = ' ';
+                }
+                break; // finished parsing %{* string
+              }
+            } // end of while(...)
+
+          } // end of %{* strings
+
+        } // end of if( long enough to contain %{*} )
+
+        switch( c ) {
+          case ARTIST:
+            s = entry.artists[trackNumber-1];
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );  // for conditional inclusion
+            dir.append( s.isEmpty()
+                ? i18n("unknown") + QString(" %1").arg(trackNumber)
+                : s );
+            break;
+          case TITLE:
+            s = entry.titles[trackNumber-1];
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );
+            dir.append( s.isEmpty()
+                ? i18n("Track %1").arg(trackNumber)
+                : s );
+            break;
+          case NUMBER:
+            dir.append( QString::number(trackNumber).rightJustify( 2, '0' ) );
+            break;
+          case YEAR:
+            dir.append( QString::number( entry.year ) );
+            break;
+          case COMMENT:
+            s = entry.extInfos[trackNumber-1];
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );
+            dir.append( s );
+            break;
+          case GENRE:
+            s = ( entry.genre.isEmpty() ? entry.category : entry.genre );
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );
+            dir.append( s );
+            break;
+          case ALBUMARTIST:
+            dir.append( entry.cdArtist.isEmpty()
+                ? i18n("unknown") : entry.cdArtist );
+            break;
+          case ALBUMTITLE:
+            s = entry.cdTitle;
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );
+            dir.append( s.isEmpty()
+                ? i18n("unknown") : s );
+            break;
+          case ALBUMCOMMENT:
+            s = entry.cdExtInfo;
+            s.replace( '/', '_' );
+            s.replace( '*', '_' );
+            s.replace( '}', '*' );
+            dir.append( s ); // I think it makes more sense to allow empty comments
+            break;
+          case DATE:
+            dir.append( KGlobal::locale()->formatDate( QDate::currentDate() ) );
+            break;
+          default:
+            dir.append( pattern.mid(i, len) );
+            break;
+        }
+        i += len - 1;
       }
       else {  // end of pattern
-	dir.append( "%" );
+        dir.append( "%" );
       }
     }
     else {
@@ -104,13 +188,10 @@ QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
     }
   }
 
-  if( replace )
-    dir.replace( QRegExp( "\\s" ), replaceString );
 
 
-
-  // /* delete line comment to comment out the following part:
-  // Conditional Inclusion (2004 by Jakob Petsovits)
+  // /* delete line comment to comment out
+  // the following part: Conditional Inclusion
 
   QValueStack<int> offsetStack;
   QString inclusion;
@@ -139,34 +220,34 @@ QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
       int length = i - offset + 1;
 
       switch( (QChar) dir[offset+1] ) {
-      case 'a':
+      case ARTIST:
         s = entry.artists[trackNumber-1];
         break;
-      case 't':
+      case TITLE:
         s = entry.titles[trackNumber-1];
         break;
-      case 'n':
+      case NUMBER:
         s = QString::number( trackNumber );
         break;
-      case 'y':
+      case YEAR:
         s = QString::number( entry.year );
         break;
-      case 'e':
+      case COMMENT:
         s = entry.extInfos[trackNumber-1];
         break;
-      case 'g':
+      case GENRE:
         s = ( entry.genre.isEmpty() ? entry.category : entry.genre );
         break;
-      case 'r':
+      case ALBUMARTIST:
         s = entry.cdArtist;
         break;
-      case 'm':
+      case ALBUMTITLE:
         s = entry.cdTitle;
         break;
-      case 'x':
+      case ALBUMCOMMENT:
         s = entry.cdExtInfo;
         break;
-      case 'd':
+      case DATE:
         s = KGlobal::locale()->formatDate( QDate::currentDate() );
         break;
       default: // we must never get here,
@@ -175,7 +256,7 @@ QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
 
       if( dir[offset+2] == '{' ) { // no string matching, e.g. ?y{text}
         switch( (QChar) dir[offset+1] ) {
-        case 'y':
+        case YEAR:
           isIncluded = (s != "0");
           break;
         default:
@@ -192,7 +273,7 @@ QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
 
         isIncluded = (s == condition);
         inclusion = dir.mid( endOfCondition+2,
-                            i - (endOfCondition+2) );
+                             i - (endOfCondition+2) );
       }
 
       if( dir[offset] == '!' )
@@ -216,6 +297,11 @@ QString K3bPatternParser::parsePattern( const K3bCddbResultEntry& entry,
 
   // end of Conditional Inclusion */
 
+
+  dir.replace( '*', '}' );  // bring the brackets back, if there were any
+
+  if( replace )
+    dir.replace( QRegExp( "\\s" ), replaceString );
 
   return dir;
 }
